# massif-rs

./: Cargo.toml  LICENSE  README.md
parser/: Cargo.toml
parser/src/: header.rs  lib.rs  snapshot.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs
