[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2", features = ["wgpu"] }
egui_plot = "0.27.2"

size.workspace = true

parser = { path = "../parser" }